# YOLO-Server-TD

./: .gitignore  PDD.md  README.md  main.py  pyproject.toml  run.bat
TD/: yolo.tox
src/: config.py  model_loader.py  video_handler.py
